--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
   <div class="book-container">
 
     <div class="book-image">
-      <img src="book image.jpg" alt="Nourishing You and Your Baby Book">
+      <img src="book-cover.jpg" alt="Nourishing You and Your Baby Book">
     </div>
 
     <div class="book-content">
